(PC-39895)[PRO] fix: Update buttons sizes and alignments

--- a/pro/src/app/App/layouts/components/Header/components/UserReviewDialog/UserReviewDialog.module.scss
+++ b/pro/src/app/App/layouts/components/Header/components/UserReviewDialog/UserReviewDialog.module.scss
@@ -74,3 +74,7 @@
     color: var(--color-icon-success);
   }
 }
+
+.item-review {
+  margin-top: rem.torem(8px);
+}
