--- a/pro/src/components/Newsletter/Newsletter.module.scss
+++ b/pro/src/components/Newsletter/Newsletter.module.scss
@@ -8,7 +8,7 @@
   border: 2px solid var(--color-border-brand-primary);
   border-radius: var(--size-border-radius-m);
   width: 100%;
-  padding: rem.torem(1px) var(--size-spacing-m);
+  padding: rem.torem(1px) rem.torem(108px) rem.torem(1px) var(--size-spacing-m);
 
   .newsletter-img {
     position: absolute;
